--- a/pages/16691.html
+++ b/pages/16691.html
@@ -904,9 +904,9 @@ margin-left: 0em;
 
 <p>In the present <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> the <a class='existingWikiWord' href='/nlab/show/proton'>proton</a> is a stable <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> (of <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>). But in some hypothetical extensions of the standard model, notably in many <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a>, the proton would be unstable, albeit with an extremely long decay time, and hence could decay (e.g. <a href='#KolesovaMalinski14'>Kolešová-Malinský 14</a>).</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/experimental+observation'>Experimental</a> searches for rare proton decay show that the minimum mean lifetime of the proton is at least on the order of <math class='maruku-mathml' display='inline' id='mathml_c4bcfaf1b317221a79708f121648e4b9c6fb3070_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>31</mn></msup></mrow><annotation encoding='application/x-tex'>10^{31}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/year'>years</a> (e.g. <a href='#SuperKamiokande15'>Super-Kamiokande 15</a>), probably higher.</p>
+<p><a class='existingWikiWord' href='/nlab/show/experimental+observation'>Experimental</a> searches for rare proton decay show that the minimum mean lifetime of the proton is at least on the order of <math class='maruku-mathml' display='inline' id='mathml_977ea2995c5bfbffe716d0bbe74022dc4ba1d2f9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>31</mn></msup></mrow><annotation encoding='application/x-tex'>10^{31}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/year'>years</a> (e.g. <a href='#SuperKamiokande15'>Super-Kamiokande 15</a>), probably higher.</p>
 
-<p>Since the age of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> is about <math class='maruku-mathml' display='inline' id='mathml_c4bcfaf1b317221a79708f121648e4b9c6fb3070_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1.3</mn><mo>⋅</mo><msup><mn>10</mn> <mn>10</mn></msup></mrow><annotation encoding='application/x-tex'>1.3 \cdot 10^{10}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/year'>years</a>, this translates to saying that on average at most one proton in 10 kilotons of protons (essentially 10 kilotons of <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atoms</a>) decays per <a class='existingWikiWord' href='/nlab/show/year'>year</a>.</p>
+<p>Since the age of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> is about <math class='maruku-mathml' display='inline' id='mathml_977ea2995c5bfbffe716d0bbe74022dc4ba1d2f9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1.3</mn><mo>⋅</mo><msup><mn>10</mn> <mn>10</mn></msup></mrow><annotation encoding='application/x-tex'>1.3 \cdot 10^{10}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/year'>years</a>, this translates to saying that on average at most one proton in 10 kilotons of protons (essentially 10 kilotons of <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atoms</a>) decays per <a class='existingWikiWord' href='/nlab/show/year'>year</a>.</p>
 
 <p>More recently it has been claimed that <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> may entirely avoid proton decay after all (<a href='#MuetterRatzVaudrevange16'>Mütter-Ratz-Vaudrevange 16</a>, <a href='#FornalGrinstein17'>Fornal-Grinstein 17</a>).</p>
 
@@ -930,7 +930,7 @@ margin-left: 0em;
 </li>
 
 <li id='KolesovaMalinski14'>
-<p>Helena Kolešová, <a class='existingWikiWord' href='/nlab/show/Michal+Malinsk%C3%BD'>Michal Malinský</a>, <em>Proton lifetime in the minimal <math class='maruku-mathml' display='inline' id='mathml_c4bcfaf1b317221a79708f121648e4b9c6fb3070_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>10</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(10)</annotation></semantics></math> GUT and its implications for the LHC</em>, Phys. Rev. D 90, 115001 (2014) (<a href='http://arxiv.org/abs/1409.4961'>arXiv:1409.4961</a>)</p>
+<p>Helena Kolešová, <a class='existingWikiWord' href='/nlab/show/Michal+Malinsk%C3%BD'>Michal Malinský</a>, <em>Proton lifetime in the minimal <math class='maruku-mathml' display='inline' id='mathml_977ea2995c5bfbffe716d0bbe74022dc4ba1d2f9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>10</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(10)</annotation></semantics></math> GUT and its implications for the LHC</em>, Phys. Rev. D 90, 115001 (2014) (<a href='http://arxiv.org/abs/1409.4961'>arXiv:1409.4961</a>)</p>
 </li>
 </ul>
 
@@ -956,20 +956,20 @@ margin-left: 0em;
 </li>
 
 <li id='FornalGrinstein17'>
-<p>Bartosz Fornal, Benjamin Grinstein, <em><math class='maruku-mathml' display='inline' id='mathml_c4bcfaf1b317221a79708f121648e4b9c6fb3070_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(5)</annotation></semantics></math> Unification without Proton Decay</em>, Physics Review Letters (<a href='https://arxiv.org/abs/1706.08535'>arXiv:1706.08535</a>)</p>
+<p>Bartosz Fornal, Benjamin Grinstein, <em><math class='maruku-mathml' display='inline' id='mathml_977ea2995c5bfbffe716d0bbe74022dc4ba1d2f9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(5)</annotation></semantics></math> Unification without Proton Decay</em>, Phys. Rev. Lett. 119, 241801 (2017) (<a href='https://arxiv.org/abs/1706.08535'>arXiv:1706.08535</a>)</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on December 28, 2017 07:36:31 
+  Revised on January 18, 2018 02:48:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/proton+decay" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton+decay/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/proton+decay" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton+decay" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/proton+decay" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton+decay/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/proton+decay" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton+decay" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
